feat:基数排序实现

--- a/其他积累/排序算法.md
+++ b/其他积累/排序算法.md
@@ -75,7 +75,7 @@ public class QuickSort {
 
 
 
-### 2、冒牌排序
+### 2、冒泡排序
 思路：
 1、从前往后依次交换 保证最大元素在最后
 2、最后确定的元素不再比较
@@ -200,9 +200,6 @@ class MergeSort{
        return newNums;
 
     }
-
-
-
 }
 
 
@@ -251,4 +248,70 @@ public class SelectionSort {
 }
 ```
 >次数为n-1 每次选择最小值（记录索引 索引包含当前index）和当前index交换
+ 
+
+
+
+
+ ### 5、基数排序
+ ```
+ public class RadixSort {
+    public static void radixSort(int[] arr) {
+        // 找到数组中的最大值，确定最大位数
+        int max = getMax(arr);
+        // 从最低位开始，对每一位进行排序
+        for (int exp = 1; max / exp > 0; exp *= 10) {
+            countingSort(arr, exp);
+        }
+    }
+
+    private static void countingSort(int[] arr, int exp) {
+        int n = arr.length;
+        int[] output = new int[n];
+        int[] count = new int[10];
+
+        // 统计每个数字出现的次数
+        for (int i = 0; i < n; i++) {
+            int digit = (arr[i] / exp) % 10;
+            count[digit]++;
+        }
+
+        // 计算每个数字的最终位置
+        for (int i = 1; i < 10; i++) {
+            count[i] += count[i - 1];
+        }
+
+        // 将元素放入输出数组中
+        for (int i = n - 1; i >= 0; i--) {
+            int digit = (arr[i] / exp) % 10;
+            output[count[digit] - 1] = arr[i];
+            count[digit]--;
+        }
+
+        // 将排序后的结果复制回原数组
+        for (int i = 0; i < n; i++) {
+            arr[i] = output[i];
+        }
+    }
+
+    private static int getMax(int[] arr) {
+        int max = arr[0];
+        for (int i = 1; i < arr.length; i++) {
+            if (arr[i] > max) {
+                max = arr[i];
+            }
+        }
+        return max;
+    }
+
+    public static void main(String[] args) {
+        int[] arr = {329, 457, 657, 839, 436, 720, 355};
+        radixSort(arr);
+        for (int num : arr) {
+            System.out.print(num + " ");
+        }
+    }
+}
+ ```
+
  
